--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 log.txt
 .directory
+javafx-sdk-11.0.2/
+
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
